kubernetes/apps/social/phanpy/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phanpy
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: social
spec:
  hostnames:
    - "phanpy.vzkn.eu"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: phanpy
          port: 8080
